# Claude-s-body-mcp

./: .gitignore  AGENTS.md  Caddyfile  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt
docs/: development-guide.md  servo-troubleshooting-2026-05-16.md
firmware/: config.h.example  platformio.ini
firmware/src/: camera_service.cpp  camera_service.h  camera_upload.cpp  camera_upload.h  face_service.cpp  face_service.h  interaction_service.cpp  interaction_service.h  led_service.cpp  led_service.h  main.cpp  mic_service.cpp  mic_service.h  playback_service.cpp  servo_service.cpp  tracker_service.cpp  tracker_service.h  ws_client.cpp  ws_client.h
mcp-server/: .env.example  device_link.py  media_server.py  oauth.py  server.py  stt.py  tts.py
tests/: mock_device.py  smoke_remote.py  test_device_link.py  test_integration.py  test_mcp_server.py  test_oauth.py
